v1.18/examples/volume/nfs-pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  namespace: default
spec:
  containers:
  - name: mysql
    image: mysql:5.7
    imagePullPolicy: IfNotPresent
    ports:
    - name: mysql
      containerPort: 3306
      protocol: TCP
    volumeMounts:
    - name: data
      mountPath: /var/lib/mysql/
      persistentVolumeClaim:
    - name: conf
      mountPath: /etc/mysql/conf.d/
    resources:
      requests:
        cpu: 500m
        memory: 1Gi
    livenessProbe:
      exec:
        command: ["mysqladmin", "ping"]
      initialDelaySeconds: 30
      periodSeconds: 10
      timeoutSeconds: 5

    readinessProbe:
      exec:
        command: ["mysql", "-h", "127.0.0.1", "-e", "SELECT 1"]
      initialDelaySeconds: 5
      periodSeconds: 2
      timeoutSeconds: 1


  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: nfs-pvc
  - name: conf
    emptyDir: {}
