v1.18/examples/volume/nginx-emptyDir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-emptydir-demo
  namespace: default
  labels:
    app: nginx-demo
spec:
  containers:
  - name: nginx-http-demo
    image: nginx:1.14.2
    imagePullPolicy: IfNotPresent
    ports:
    - name: http
      containerPort: 80
    volumeMounts:
    - name: html-file
      mountPath: /usr/share/nginx/html/
  - name: busybox
    image: busybox:latest
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: html-file
      mountPath: /data/
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo hello world! >> /data/index.html; sleep 3; done"]
  volumes:
  - name: html-file
    emptyDir: {}
