v1.18/examples/volume/nginx-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-hostpath-demo
  namespace: default
spec:
  containers:
  - name: nginx-test-hostpath
    image: nginx:1.14.2
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html/
  volumes:
  - name: html
    hostPath:
      # directory location on host
      path: /tmp/data/
      # this field is optional
      type: Directory
