v1.18/examples/volume/nginx-nfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-nginx
#  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html/
        ports:
        - containerPort: 80 
      volumes:
      - name: html
        nfs:
          path: /data/volume
          server: k8s-nfs-server

---
apiVersion: v1
kind: Service
metadata:
  name: web-nginx
#  namespace: default
spec:
  selector:
    app: nginx
#  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
#    nodePort: 30001
