v1.18/examples/volume/ingress-web.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-nginx
#  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: www.web-nginx.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web-nginx
          servicePort: 80
